Add image of the recipe in korean-fried-chicken.html

--- a/recipes/korean-fried-chicken.html
+++ b/recipes/korean-fried-chicken.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Korean Fried Chicken</h1>
+    <img src="../images/chicken.jpeg" alt="A delicious-looking Korean Fried Chicken">
 </body>
 </html>
