--- a/recipes/korean-fried-chicken.html
+++ b/recipes/korean-fried-chicken.html
@@ -9,5 +9,8 @@
 <body>
     <h1>Korean Fried Chicken</h1>
     <img src="../images/chicken.jpeg" alt="A delicious-looking Korean Fried Chicken">
+    <h2>Description</h2>
+    <p>Korean fried chicken, usually called chikin in Korea, refers to a variety of fried chicken dishes created in South Korea, including the basic huraideu-chicken and spicy yangnyeom chicken. In South Korea, fried chicken is consumed as a meal, an appetizer, anju, or as an after-meal snack.</p>
+    <p>So what makes Korean fried chicken so different from its American counterpart? While its American cousin is usually brined and dredged in a flour and buttermilk mixture, Korean fried chicken tends to be more light and crispy with a thin, almost paper-like skin that is not heavily battered.</p>
 </body>
 </html>
