Add lists of ingredients in korean-fried-chicken.html

--- a/recipes/korean-fried-chicken.html
+++ b/recipes/korean-fried-chicken.html
@@ -12,5 +12,25 @@
     <h2>Description</h2>
     <p>Korean fried chicken, usually called chikin in Korea, refers to a variety of fried chicken dishes created in South Korea, including the basic huraideu-chicken and spicy yangnyeom chicken. In South Korea, fried chicken is consumed as a meal, an appetizer, anju, or as an after-meal snack.</p>
     <p>So what makes Korean fried chicken so different from its American counterpart? While its American cousin is usually brined and dredged in a flour and buttermilk mixture, Korean fried chicken tends to be more light and crispy with a thin, almost paper-like skin that is not heavily battered.</p>
+    <h3>Ingredients</h3>
+    <p>(Yields <em>Four</em> servings)</p>
+    <p><strong>Marinade:</strong></p>
+    <ul>
+        <li>1 pound skinless, boneless chicken thighs, quartered</li>
+        <li>1/2 yellow onion, grated</li>
+        <li>4 cloves garlic, minced</li>
+        <li>1 teaspoon fine salt</li>
+        <li>1/2 teaspoon freshly ground black pepper</li>
+    </ul>
+    <p><strong>Batter</strong></p>
+    <ul>
+        <li>3/4 cup cornstarch</li>
+        <li>1/2 cup self-rising flour</li>
+        <li>1 teaspoon white sugar</li>
+        <li>1/2 teaspoon ground black pepper</li>
+        <li>1/4 teaspoon salt</li>
+        <li>1 cup very cold water, or as needed</li>
+        <li>oil, or as needed</li>
+    </ul>
 </body>
 </html>
