Add 'author's note' heading and paragraph to korean-fried-chicken.html

--- a/recipes/korean-fried-chicken.html
+++ b/recipes/korean-fried-chicken.html
@@ -41,5 +41,7 @@
         <li>Increase oil temperature in the deep-fryer or large saucepan to 375 &deg;F (190 &deg;C).</li>
         <li>Working in batches, cook chicken again in hot oil until golden brown and crispy on the outside, 3 to 4 minutes. Transfer to a wire rack to drain.</li>
     </ol>
+    <h2>Author's Note</h2>
+    <p>You can substitute 1/2 cup all-purpose flour plus 3/4 teaspoon baking powder and 1/4 teaspoon salt for the self-rising flour.</p>
 </body>
 </html>
