--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/korean-fried-chicken.html">Korean Fried Chicken</a>
+    <ul>
+        <li><a href="./recipes/korean-fried-chicken.html">Korean Fried Chicken</a></li>
+        <li><a href="./recipes/sauce.html">Korean Fried Chicken Sauce</a></li>
+    </ul>
 </body>
 </html>
