Add sauce.jpeg to sauce.html

--- a/recipes/sauce.html
+++ b/recipes/sauce.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Korean Fried Chicken Sauce</h1>
+    <img src="../images/sauce.jpeg" alt="Korean Fried Chicken dipped in Korean sauce">
 </body>
 </html>
