--- a/recipes/sauce.html
+++ b/recipes/sauce.html
@@ -9,5 +9,7 @@
 <body>
     <h1>Korean Fried Chicken Sauce</h1>
     <img src="../images/sauce.jpeg" alt="Korean Fried Chicken dipped in Korean sauce">
+    <h2>Description</h2>
+    <p>Korean Fried Chicken matched with Korean Sauce brings the best out of this dish.</p>
 </body>
 </html>
