Add heading and ul list of ingredients to sauce.html

--- a/recipes/sauce.html
+++ b/recipes/sauce.html
@@ -11,5 +11,19 @@
     <img src="../images/sauce.jpeg" alt="Korean Fried Chicken dipped in Korean sauce">
     <h2>Description</h2>
     <p>Korean Fried Chicken matched with Korean Sauce brings the best out of this dish.</p>
+    <h2>Ingredients</h2>
+    <p>(Yields <em>Six</em> servings)</p>
+    <ul>
+        <li>1/2 cup ketchup</li>
+        <li>2 green onions, minced</li>
+        <li>4 cloves garlic, minced</li>
+        <li>1 lemon, juiced, or more to taste</li>
+        <li>2 tablespoons honey</li>
+        <li>1 tablespoon chile-garlic sauce (such as sambal), or to taste</li>
+        <li>1 teaspoon red pepper flakes, or to taste</li>
+        <li>1/2 teaspoon freshly ground black pepper, or to taste</li>
+        <li>1/4 cup water, or as needed</li>
+        <li>1 pinch salt, or to taste</li>
+    </ul>
 </body>
 </html>
