Add heading and ordered list of steps of recipe to sauce.html

--- a/recipes/sauce.html
+++ b/recipes/sauce.html
@@ -25,5 +25,11 @@
         <li>1/4 cup water, or as needed</li>
         <li>1 pinch salt, or to taste</li>
     </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Whisk ketchup, green onion, garlic, lemon juice, honey, chile-garlic sauce, red pepper flakes, and black pepper together in a saucepan over medium-high heat; add enough water to reach desired sauce consistency.</li>
+        <li>Bring sauce to a simmer; reduce heat to medium-low, and simmer until thick and flavors blend, about 5 minutes.</li>
+        <li>Cool to room temperature and season with salt.</li>
+    </ol>
 </body>
 </html>
