Add heading and paragraph about notes to sauce.html

--- a/recipes/sauce.html
+++ b/recipes/sauce.html
@@ -31,5 +31,7 @@
         <li>Bring sauce to a simmer; reduce heat to medium-low, and simmer until thick and flavors blend, about 5 minutes.</li>
         <li>Cool to room temperature and season with salt.</li>
     </ol>
+    <h2>Author's Note</h2>
+    <p>Everything in this recipe is to taste, so adjust until you think it's balanced between sweet, sour, and spicy.</p>
 </body>
 </html>
