--- a/recipes/sauce.html
+++ b/recipes/sauce.html
@@ -33,5 +33,6 @@
     </ol>
     <h2>Author's Note</h2>
     <p>Everything in this recipe is to taste, so adjust until you think it's balanced between sweet, sour, and spicy.</p>
+    <p>Serve with <a href="./korean-fried-chicken.html">Korea Fried Chicken</a>.</p>
 </body>
 </html>
