Add a period in the last paragraph in fried-chicken.html

--- a/recipes/korean-fried-chicken.html
+++ b/recipes/korean-fried-chicken.html
@@ -43,6 +43,6 @@
     </ol>
     <h2>Author's Note</h2>
     <p>You can substitute 1/2 cup all-purpose flour plus 3/4 teaspoon baking powder and 1/4 teaspoon salt for the self-rising flour.</p>
-    <p>Serve with <a href="./sauce.html">Korean Fried Chicken Sauce</a></p>
+    <p>Serve with <a href="./sauce.html">Korean Fried Chicken Sauce</a>.</p>
 </body>
 </html>
