Change <p><strong> elements to <h3> in ...-chicken.html

--- a/recipes/korean-fried-chicken.html
+++ b/recipes/korean-fried-chicken.html
@@ -14,7 +14,7 @@
     <p>So what makes Korean fried chicken so different from its American counterpart? While its American cousin is usually brined and dredged in a flour and buttermilk mixture, Korean fried chicken tends to be more light and crispy with a thin, almost paper-like skin that is not heavily battered.</p>
     <h2>Ingredients</h3>
     <p>(Yields <em>Four</em> servings)</p>
-    <p><strong>Marinade:</strong></p>
+    <h3>Marinade:</h3>
     <ul>
         <li>1 pound skinless, boneless chicken thighs, quartered</li>
         <li>1/2 yellow onion, grated</li>
@@ -22,7 +22,7 @@
         <li>1 teaspoon fine salt</li>
         <li>1/2 teaspoon freshly ground black pepper</li>
     </ul>
-    <p><strong>Batter</strong></p>
+    <h3>Batter</h3>
     <ul>
         <li>3/4 cup cornstarch</li>
         <li>1/2 cup self-rising flour</li>
