--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <ul>
         <li><a href="./recipes/korean-fried-chicken.html">Korean Fried Chicken</a></li>
         <li><a href="./recipes/sauce.html">Korean Fried Chicken Sauce</a></li>
+        <li><a href="./recipes/tangsuyuk.html">Tangsuyuk (Korean Sweet and Sour Pork)</a></li>
     </ul>
 </body>
 </html>
