--- a/recipes/tangsuyuk.html
+++ b/recipes/tangsuyuk.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Tangsuyuk (Korean Sweet and Sour Pork)</h1>
+    <img src="../images/tangsuyuk.jpeg" alt="Glistering and appetizing Tangsuyuk">
 </body>
 </html>
