Add h2, h3 headings and ul lists of ingredients to tangsuyuk.html

--- a/recipes/tangsuyuk.html
+++ b/recipes/tangsuyuk.html
@@ -12,6 +12,37 @@
     <h2>Description</h2>
     <p>Tangsuyuk is a very popular Korean Chinese dish. It is crispy deep fried pork coated with sweet and sour sauce. The pork is crunchy and the sauce is irresistible!</p>
     <p>Tansuyuk / Tang soo yook / Tang su yuk ( <span lang="kr">탕수육</span> ) is a very popular Korean Chinese dish known as Korean sweet and sour pork. The pork is double deep fried and it's crunchy. What's more, the sauce! hmm... The right balance of sweetness and sourness is totally addictive and irresistible! OK, I'm in love. Seriously, this is so good!</p>
-    
+    <h2>Ingredients</h2>
+    <h3>Meat</h3>
+    <ul>
+        <li>500 g / 1.1 pounds pork loin, cut into thin strips (about 1 cm x 5 cm)</li>
+        <li>Some vegetable oil for cooking and deep frying</li>
+    </ul>
+    <p>Note: You can use beef or chicken instead. Use lean and tender parts of the meat.</p>
+    <h3>Marinade</h3>
+    <ul>
+        <li>1 tablespoon rice wine (or any cooking wine)</li>
+        <li>1 teaspoon ginger powder (or minced ginger)</li>
+        <li>1 teaspoon soy sauce</li>
+        <li>1 teaspoon fine sea salt</li>
+        <li>A few sprinkles ground black pepper</li>
+    </ul>
+    <h3>Batter</h3>
+    <ul>
+        <li>1 & 1/4 cup potato starch (or corn starch)</li>
+        <li>1 cup water</li>
+        <li>1/2 tablespoon cooking oil</li>
+        <li>2 egg whites</li>
+    </ul>
+    <h3>Fruit and Vegetables</h3>
+    <ul>
+        <li>150 g / 5.3 ounces pineapple slices, cut into small chunks</li>
+        <li>1/2 onion (70 g / 2.5 ounces), cut into small chunks</li>
+        <li>1/2 green capsicum (50 g / 1.8 ounces), cut into small chunks</li>
+        <li>1/2 red capsicum (50 g / 1.8 ounces), thinly sliced</li>
+        <li>1/4 carrot (30 g/ 1 ounce), thinly sliced</li>
+        <li>1/4 English cucumber (50 g / 1.8 ounces), thinly sliced</li>
+    </ul>
+    <p>Note: Other popular fruit and vegetables options - earwood mushrooms and apple</p>
 </body>
 </html>
