Add h2, h3 headings and ul lists about sauce in tangsuyuk.html

--- a/recipes/tangsuyuk.html
+++ b/recipes/tangsuyuk.html
@@ -44,5 +44,19 @@
         <li>1/4 English cucumber (50 g / 1.8 ounces), thinly sliced</li>
     </ul>
     <p>Note: Other popular fruit and vegetables options - earwood mushrooms and apple</p>
+    <h2>Sweet and Sour Sauce</h2>
+    <h3>Sauce (Mix them in a bowl)</h3>
+    <ul>
+        <li>200 ml water</li>
+        <li>200 ml pineapple juice</li>
+        <li>1/4 cup sugar</li>
+        <li>3 tablespoon soy sauce, regular</li>
+        <li>2 tablespoon apple cider vinegar</li>
+    </ul>
+    <h3>Sauce Thickening Agent (Mix them in a bowl)</h3>
+    <ul>
+        <li>2 tablespoon potato starch (or corn starch)</li>
+        <li>2 tablespoon water</li>
+    </ul>
 </body>
 </html>
