--- a/recipes/tangsuyuk.html
+++ b/recipes/tangsuyuk.html
@@ -58,5 +58,16 @@
         <li>2 tablespoon potato starch (or corn starch)</li>
         <li>2 tablespoon water</li>
     </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>In order to make the batter for frying, prepare a medium size bowl and add the potato starch and water. Once you have added these ingredients, use a spatula to gently flatten the starch and submerge it under water. It is important that you do not mix or whisk at this time. Instead, leave it on the kitchen bench while you prepare the other ingredients. This will allow the water and starch to separate, which will take approximately 10 to 20 minutes.</li>
+        <li>Combine the pork with the marinade and mix them well. Set aside (in the fridge) until needed.</li>
+        <li>Once the starch and water have been separated (from step 1), gently discard the water (the last part of the water includes a bit of starch but it’s okay to discard it). Combine the starch sediment with the cooking oil and egg whites. Mix them well until the texture is smooth (It will be stiff at first, so you might need to use a fork or equivalent tool to mix.). Set it aside.</li>
+        <li>Add the pork (from step 2) into the batter bowl (from step 3). Mix them well. Allow the batter to rest for about 10 minutes to allow it to thicken. This will help ensure that your fried pork is very crisp.</li>
+        <li>Fill a wok with a generous amount of oil and bring it to boil until it reaches 175 C / 350 F (or boiling). (It takes about 5 mins.) Add the battered pork into the wok one at a time and cook the meat. (It takes about 1 to 2 mins to cook.) Make sure the wok doesn’t get crowded. Scoop out the meat and move them onto kitchen paper to soak away the excess oil. Repeat this with the remaining meat.</li>
+        <li>In a separate pan, pour the sweet and sour sauce into the pot. Heat the sauce on medium high heat until it bubbles up. Add the carrots into the sauce and boil for 1 min. Add the remaining fruit and vegetables and boil the sauce a further 2 mins. Add the thickening agent and stir constantly until the sauce thickens. Remove from the heat.</li>
+        <li>Return to the wok. Heat the oil again until it reaches 175 C / 350 F (or boiling). Deep fry all the meat (from step 5) briefly again to make it crispier. (The wok can be crowded this time.) Scoop out the meat and place it onto kitchen paper.</li>
+        <li>Serve the meat on a plate with the sweet and sour sauce over it. Alternatively, you can serve them in a separate plate and a bowl. This will prevent the fried pork from getting soggy.</li>
+    </ol>
 </body>
 </html>
