Add h2 heading and paragraphs about author's note to tangsuyuk.html

--- a/recipes/tangsuyuk.html
+++ b/recipes/tangsuyuk.html
@@ -69,5 +69,8 @@
         <li>Return to the wok. Heat the oil again until it reaches 175 C / 350 F (or boiling). Deep fry all the meat (from step 5) briefly again to make it crispier. (The wok can be crowded this time.) Scoop out the meat and place it onto kitchen paper.</li>
         <li>Serve the meat on a plate with the sweet and sour sauce over it. Alternatively, you can serve them in a separate plate and a bowl. This will prevent the fried pork from getting soggy.</li>
     </ol>
+    <h2>Author's Note</h2>
+    <p>It tastes best when served immediately after cooking.</p>
+    <p>If you are refrigerating Tangsuyuk, keep the sauce separate to the meat so that the crispness last a bit longer.</p>
 </body>
 </html>
