Add a link to index.html from all recipes' html

--- a/recipes/sauce.html
+++ b/recipes/sauce.html
@@ -34,5 +34,7 @@
     <h2>Author's Note</h2>
     <p>Everything in this recipe is to taste, so adjust until you think it's balanced between sweet, sour, and spicy.</p>
     <p>Serve with <a href="./korean-fried-chicken.html">Korea Fried Chicken</a>.</p>
+    <hr>
+    <a href="../index.html">MENU</a>
 </body>
 </html>
