--- a/recipes/tangsuyuk.html
+++ b/recipes/tangsuyuk.html
@@ -72,5 +72,7 @@
     <h2>Author's Note</h2>
     <p>It tastes best when served immediately after cooking.</p>
     <p>If you are refrigerating Tangsuyuk, keep the sauce separate to the meat so that the crispness last a bit longer.</p>
+    <hr>
+    <a href="../index.html">MENU</a>
 </body>
 </html>
