--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Project: Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>My Favorite Korean Recipes</h1>
     <ul>
         <li><a href="./recipes/korean-fried-chicken.html">Korean Fried Chicken</a></li>
         <li><a href="./recipes/sauce.html">Korean Fried Chicken Sauce</a></li>
