--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>My Favorite Korean Recipes</h1>
+    <img src="./images/korean-food.jpeg" alt="Many Korean dishes exhibited on a table">
     <ul>
         <li><a href="./recipes/korean-fried-chicken.html">Korean Fried Chicken</a></li>
         <li><a href="./recipes/sauce.html">Korean Fried Chicken Sauce</a></li>
