Add missing ')' in line 38 in ...-chicken.html

--- a/recipes/korean-fried-chicken.html
+++ b/recipes/korean-fried-chicken.html
@@ -35,7 +35,7 @@
     <h2>Steps</h3>
     <ol>
         <li>Stir chicken, onion, garlic, fine salt, and 1/2 teaspoon black pepper together in a bowl until chicken is coated. Cover the bowl with plastic warp and refrigerate, 4 hours to overnight.</li>
-        <li>Heat oil in a deep-fryer or large saucepan to 340 &deg;F (171 &deg;C</li>
+        <li>Heat oil in a deep-fryer or large saucepan to 340 &deg;F (171 &deg;C)</li>
         <li>Whisk cornstarch, flour, sugar, 1/2 teaspoon black pepper, and 1/4 teaspoon salt together in a large bowl. Gradually whisk ice water into flour in until mixture resembles a smooth pancake batter. Transfer chicken to batter and stir to coat chicken completely.</li>
         <li>Working in batches, cook chicken in preheated oil for 4 minutes. Transfer cooked chicken to a cooling rack.</li>
         <li>Increase oil temperature in the deep-fryer or large saucepan to 375 &deg;F (190 &deg;C).</li>
